--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Baloo+Thambi+2:wght@400;700&family=Pacifico&display=swap" rel="stylesheet"> -->
     <title>Burger Builder</title>
   </head>
   <body>
